--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<header>
-    <title>Home</title>
-</header>
 <html>
     <head>
         <title>Home</title>
     </head>
     <body>
-
+<header class="header">
+    <a href="#" class="logo">Logo</a>
+    <nav class="navbar">
+        <a href="#">Начална страница</a>
+        <a href="#">За нас</a>
+        <a href="#">Контакти</a>
+    </nav>
+</header>
     </body>
 </html>
