--- a/index.html
+++ b/index.html
@@ -1,16 +1,79 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Home</title>
-    </head>
-    <body>
-<header class="header">
-    <a href="#" class="logo">Logo</a>
-    <nav class="navbar">
-        <a href="#">Начална страница</a>
-        <a href="#">За нас</a>
-        <a href="#">Контакти</a>
-    </nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prehistory Website</title>
+    <style>
+        /* Add your CSS styles here */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #666;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Welcome to the Prehistory Website</h1>
 </header>
-    </body>
+
+<nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Artifacts</a>
+    <a href="#">Timeline</a>
+    <a href="#">Contact</a>
+</nav>
+
+<div class="container">
+    <h2>About Prehistory</h2>
+    <p>Prehistory is the period of human history before written records. It includes the Paleolithic, Mesolithic, and Neolithic periods, which spanned millions of years.</p>
+    <p>This website aims to explore the various aspects of prehistoric life, including ancient civilizations, tools, art, and cultural developments.</p>
+</div>
+
+<footer>
+    <p>&copy; 2024 Prehistory Website. All rights reserved.</p>
+</footer>
+
+</body>
 </html>
