--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 </header>
 
 <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Artifacts</a>
-    <a href="#">Timeline</a>
-    <a href="#">Contact</a>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Artifacts</a></li>
+        <li><a href="#">Timeline</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
 </nav>
 
 <div class="container">
