--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Artifacts</a></li>
-        <li><a href="#">Timeline</a></li>
+        <li><a href="timeline.html">Timeline</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
 </nav>
