--- a/here/timeline.html
+++ b/here/timeline.html
@@ -11,7 +11,15 @@
 <header>
     <h1>Prehistory Timeline</h1>
 </header>
-
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Artifacts</a></li>
+        <li><a href="timeline.html">Timeline</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
 <div class="timeline">
     <div class="event">
         <div class="event-date">2.5 million years ago</div>
