--- a/here/timeline.html
+++ b/here/timeline.html
@@ -11,15 +11,8 @@
 <header>
     <h1>Prehistory Timeline</h1>
 </header>
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Artifacts</a></li>
-        <li><a href="timeline.html">Timeline</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-</nav>
+<main-nav></main-nav>
+
 <div class="timeline">
     <div class="event">
         <div class="event-date">2.5 million years ago</div>
@@ -38,9 +31,8 @@
     <!-- Add more events here -->
 </div>
 
-<footer>
-    <p>&copy; 2024 Prehistory Website. All rights reserved.</p>
-</footer>
-
+<main-footer></main-footer>
+<script src="nav.js"></script>
+<script src="footer.js"></script>
 </body>
 </html>
