--- a/here/aboutus.html
+++ b/here/aboutus.html
@@ -11,6 +11,7 @@
 <header>
     <h1>About Us</h1>
 </header>
+<main-nav></main-nav>
 
 <div class="about-us">
     <div class="about-text">
@@ -23,9 +24,8 @@
     </div>
 </div>
 
-<footer>
-    <p>&copy; 2024 Prehistory Website. All rights reserved.</p>
-</footer>
-
+<main-footer></main-footer>
+<script src="nav.js"></script>
+<script src="footer.js"></script>
 </body>
 </html>
