--- a/here/contact.html
+++ b/here/contact.html
@@ -11,6 +11,7 @@
 <header>
     <h1>Contact Us</h1>
 </header>
+<main-nav></main-nav>
 
 <div class="contact-section">
     <div class="contact-info">
@@ -28,9 +29,9 @@
     </div>
 </div>
 
-<footer>
-    <p>&copy; 2024 Prehistory Adventures. All rights reserved.</p>
-</footer>
+<main-footer></main-footer>
+<script src="nav.js"></script>
+<script src="footer.js"></script>
 
 </body>
 </html>
