--- a/here/index.html
+++ b/here/index.html
@@ -40,65 +40,22 @@
   </head>
   <body>
     <header>
-      <h1>Welcome to the Prehistory Site</h1>
+      <h1>Welcome to the Prehistory Sit</h1>
   </header>
+  <main-nav></main-nav>
   
-  <nav>
-      <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="aboutus.html">About</a></li>
-          <li><a href="#">Artifacts</a></li>
-          <li><a href="timeline.html">Timeline</a></li>
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
-  </nav>
   
   <div class="container">
       <h2>About Prehistory</h2>
       <p>Prehistory is the period of human history before written records. It includes the Paleolithic, Mesolithic, and Neolithic periods, which spanned millions of years.</p>
-      <p>This website aims to explore the various aspects of prehistoric life, including ancient civilizations, tools, art, and cultural developments.</p>
+      <p>This website aims to explore the various aspects of prehistoric life, including ancient civilizations, tools, art, and cultural developments</p>
   </div>
   
   <footer>
-      <p>&copy; 2024 Prehistory Website  All rights reserved</p>
+      <p>&copy; 2024   Prehistory Website   All rights reserved</p>
   </footer>
-    <script>
-              document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
+  <script src="integration.js"></script>
+  <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
+  <script src="nav.js"></script>
   </body>
 </html>
