--- a/public/contact.html
+++ b/public/contact.html
@@ -12,23 +12,48 @@
     <h1>Contact Us</h1>
 </header>
 <main-nav></main-nav>
+<div class="contact-form">
 
-<div class="contact-section">
     <div class="contact-info">
         <h2>Get in Touch</h2>
         <p>Have any questions or inquiries? Feel free to contact us using the form below or through our email.</p>
         <p>Email: contact@prehistoricadventures.com</p>
     </div>
-    <div class="contact-form">
-        <form action="#" method="post">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
+    <small>Enter message (optional) and click button "Send"</small>
+    <div class="contact-section">
+        <div class="wrapper centered">
+            <article class="letter">
+                <div class="side">
+                    <h1>Contact us</h1>
+                    <p>
+                        <textarea placeholder="Your message"></textarea>
+                    </p>
+                </div>
+                <div class="side">
+                    <p>
+                        <input type="text" placeholder="Your name" >
+                    </p>
+                    <p>
+                        <input type="email" placeholder="Your email" >
+                    </p>
+                    <p>
+                        <button id="sendLetter">Send</button>
+                    </p>
+                </div>
+            </article>
+            <div class="envelope front"></div>
+            <div class="envelope back"></div>
+        </div>
+        <p class="result-message centered">Thank you for your message</p>
     </div>
 </div>
+<script>
+    function addClass() {
+  document.body.classList.add("sent");
+}
 
+sendLetter.addEventListener("click", addClass);
+</script>
 <main-footer></main-footer>
 <script src="nav.js"></script>
 <script src="footer.js"></script>
