--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
       <p>Prehistory is the period of human history before written records. It includes the Paleolithic, Mesolithic, and Neolithic periods, which spanned millions of years.</p>
       <p>This website aims to explore the various aspects of prehistoric life, including ancient civilizations, tools, art, and cultural developments</p>
   </div>
+  <button><a href="3dindex.html">fwshfiehfiwh</a></button>
   
   <footer>
       <p>&copy; 2024   Prehistory Website   All rights reserved</p>
