--- a/public/index2.html
+++ b/public/index2.html
@@ -35,13 +35,11 @@
       <p>Prehistory is the period of human history before written records. It includes the Paleolithic, Mesolithic, and Neolithic periods, which spanned millions of years.</p>
       <p>This website aims to explore the various aspects of prehistoric life, including ancient civilizations, tools, art, and cultural developments</p>
   </div>
-  <button><a href="3dindex.html">fwshfiehfiwh</a></button>
   
-  <footer>
-      <p>&copy; 2024   Prehistory Website   All rights reserved</p>
-  </footer>
+  <main-footer></main-footer>
   <script src="integration.js"></script>
   <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
   <script src="nav.js"></script>
+  <script src="footer.js"></script>
   </body>
 </html>
