--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - 3D Website Rotate </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Home</title>
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/10.11.0/firebase-app-compat.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/10.11.0/firebase-auth-compat.js"></script>
+  <script defer src="/__/firebase/10.11.0/firebase-database-compat.js"></script>
+  <script defer src="/__/firebase/10.11.0/firebase-firestore-compat.js"></script>
+  <script defer src="/__/firebase/10.11.0/firebase-functions-compat.js"></script>
+  <script defer src="/__/firebase/10.11.0/firebase-messaging-compat.js"></script>
+  <script defer src="/__/firebase/10.11.0/firebase-storage-compat.js"></script>
+  <script defer src="/__/firebase/10.11.0/firebase-analytics-compat.js"></script>
+  <script defer src="/__/firebase/10.11.0/firebase-remote-config-compat.js"></script>
+  <script defer src="/__/firebase/10.11.0/firebase-performance-compat.js"></script>
+  <!-- 
+    initialize the SDK after all desired features are loaded, set useEmulator to false
+    to avoid connecting the SDK to running emulators.
+  -->
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+  
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./contact.css">
 </head>
@@ -52,48 +71,7 @@
     <section class="page face right" id="contact">
       <div class="act-table text-center">
         <div class="act-table-cell-ver-middle">
-          <div class="contact-form">
-
-            <div class="contact-info">
-                <h2>Get in Touch</h2>
-                <p>Have any questions or inquiries? Feel free to contact us using the form below or through our email.</p>
-                <p>Email: contact@prehistoricadventures.com</p>
-            </div>
-            <small>Enter message (optional) and click button "Send"</small>
-            <div class="contact-section">
-                <div class="wrapper centered">
-                    <article class="letter">
-                        <div class="side">
-                            <h1>Contact us</h1>
-                            <p>
-                                <textarea placeholder="Your message"></textarea>
-                            </p>
-                        </div>
-                        <div class="side">
-                            <p>
-                                <input type="text" placeholder="Your name" >
-                            </p>
-                            <p>
-                                <input type="email" placeholder="Your email" >
-                            </p>
-                            <p>
-                                <button id="sendLetter">Send</button>
-                            </p>
-                        </div>
-                    </article>
-                    <div class="envelope front"></div>
-                    <div class="envelope back"></div>
-                </div>
-                <p class="result-message centered">Thank you for your message</p>
-            </div>
-        </div>
-        <script>
-          function addClass() {
-        document.body.classList.add("sent");
-      }
-      
-      sendLetter.addEventListener("click", addClass);
-      </script>
+          
         </div>
       </div>
       <main-footer></main-footer>
