Revert "old commit"
This reverts commit 8f42a9388f5f85f5ebeec73fe1f5ed36c3693471.

--- a/public/contact.html
+++ b/public/contact.html
@@ -46,9 +46,14 @@
         </div>
         <p class="result-message centered">Thank you for your message</p>
     </div>
-
 </div>
+<script>
+    function addClass() {
+  document.body.classList.add("sent");
+}
 
+sendLetter.addEventListener("click", addClass);
+</script>
 <main-footer></main-footer>
 <script src="nav.js"></script>
 <script src="footer.js"></script>
