--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,10 @@
       <p>This website aims to explore the various aspects of prehistoric life, including ancient civilizations, tools, art, and cultural developments</p>
   </div>
   
-  <footer>
-      <p>&copy; 2024   Prehistory Website   All rights reserved</p>
-  </footer>
+  <main-footer></main-footer>
   <script src="integration.js"></script>
   <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
   <script src="nav.js"></script>
+  <script src="footer.js"></script>
   </body>
 </html>
