--- a/publics/index.html
+++ b/publics/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hom</title>
     <link href="index.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/10.11.0/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
