--- a/publics/timeline.html
+++ b/publics/timeline.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prehistory Timeline</title>
     <link rel="stylesheet" href="timeline.css">
-</head>
+    <link href="style.css" rel="stylesheet"/>
+  </head>
 <body>
 
 <header>
@@ -187,7 +188,8 @@
   </section>
 
 <main-footer></main-footer>
-<script src="nav.js"></script>
+<script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 <script src="footer.js"></script>
+<script src="nav.js"></script>
 </body>
 </html>
