--- a/publics/aboutus.html
+++ b/publics/aboutus.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="aboutus.css">
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -25,6 +26,7 @@
 </div>
 
 <main-footer></main-footer>
+<script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 <script src="nav.js"></script>
 <script src="footer.js"></script>
 </body>
