--- a/publics/contact.html
+++ b/publics/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="contact.css">
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -30,22 +31,24 @@
                     </p>
                 </div>
                 <div class="side">
-                    <form action="https://api.web3forms.com/submit" method="POST">
-                        <p>
-                            <input type="hidden" name="access_key" value="e6cb5d55-9657-4880-9152-ebbfc34a3aa2">
+                    <form  >
+                    <!--<p>
+                        method="POST"
+                        action="https://api.web3forms.com/submit"
+                        <input type="hidden" name="access_key" value="e6cb5d55-9657-4880-9152-ebbfc34a3aa2">
+                    </p>-->
+                    <p>
+                            <input id="name" type="text" name="name" placeholder="Your name">
                         </p>
-                            <p>
-                            <input type="text" name="name" placeholder="Your name" >
-                        </p>
                         <p>
-                            <input type="email" name="email" placeholder="Your email" >
+                            <input id="email" type="email" name="email" placeholder="Your email">
                         </p>
                         <p>
                             <button id="sendLetter" type="submit">Send</button>
                         </p>
                     </form>
-                </div>
-            </article>
+                    </div>
+                </article>
             <div class="envelope front"></div>
             <div class="envelope back"></div>
         </div>
@@ -54,12 +57,20 @@
 </div>
 <script>
     function addClass() {
-  document.body.classList.add("sent");
-}
+        /*        if(document.getElementsById("email").value!="")
+        {
+            if(document.getElementsById("name").value!="")
+            {  */
+ 
+                document.body.classList.add("sent");
+            }
+        
+
 
 sendLetter.addEventListener("click", addClass);
 </script>
 <main-footer></main-footer>
+<script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 <script src="nav.js"></script>
 <script src="footer.js"></script>
 </body>
