--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -3,13 +3,25 @@
     <head>
         <title>Artifacts</title>
         <link href="style.css" rel="stylesheet"/>
+        <link href="artifacts.css" rel="stylesheet"/>
     </head>
     <body>
         <header>
             <h1>Artifacts</h1>
         </header>
         <main-nav></main-nav>
-
+        <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="img_avatar.png" alt="" style="width:300px;height:300px;">
+              </div>
+              <div class="flip-card-back">
+                <h1>John Doe</h1>
+                <p>Architect & Engineer</p>
+                <p>We love that guy</p>
+              </div>
+            </div>
+          </div>
         <main-footer></main-footer>
         <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
         <script src="nav.js"></script>
