--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hom</title>
+    <title>Home page</title>
     <link href="index.css" rel="stylesheet"/>
     <link href="style.css" rel="stylesheet"/>
     <!-- update the version number as needed -->
@@ -25,11 +25,10 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
   </head>
   <body>
-    <header>
-      <h1>Welcome to the Prehistory Sit</h1>
-  </header>
-  <main-nav></main-nav>
-  
+    <header id="menuContainer">
+      <h1>Welcome to the Prehistory Sit</h1> 
+    </header>
+    <main-nav></main-nav>
   
   <div class="container">
       <h2>About Prehistory</h2>
