--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
                         </div>
                         <div class="contant_box_404">
                             <h3 class="h3">Изглежда си се загубил</h3>
-                            <p>страницата, която търсиш не може да буде намерена!</p>
+                            <p>страницата, която търсиш не може да бъде намерена!</p>
                             <a href="index.html" class="link_404">Към началната страница</a>
                         </div>
                     </div>
