--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -10,21 +10,11 @@
             <h1>Artifacts</h1>
         </header>
         <main-nav></main-nav>
-        <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="img_avatar.png" alt="" style="width:300px;height:300px;">
-              </div>
-              <div class="flip-card-back">
-                <h1>John Doe</h1>
-                <p>Architect & Engineer</p>
-                <p>We love that guy</p>
-              </div>
-            </div>
-          </div>
+        <div id="artifacts"></div>
         <main-footer></main-footer>
         <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
         <script src="nav.js"></script>
+        <script src="artifacts.js"></script>
         <script src="footer.js"></script>
     </body>
 </html>
