--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -13,16 +13,24 @@
     <h1>About Us</h1>
 </header>
 <main-nav></main-nav>
-
-<div class="about-us">
-    <div class="about-text">
-        <h2>Welcome to Our Story</h2>
-        <p>We are passionate about exploring and sharing the wonders of prehistory. Our team consists of archaeologists, historians, and enthusiasts dedicated to uncovering the mysteries of ancient civilizations.</p>
-        <p>Join us on a journey through time as we delve into the rich tapestry of human history, from the dawn of humanity to the rise of complex societies.</p>
-    </div>
-    <div class="about-image">
-        <!-- Add your image here -->
-    </div>
+<div class="profile-container">
+<div class="profile-card">
+    <img class="profile-picture" src="profile1.jpg" alt="Profile Picture">
+    <div class="profile-name">Иван Ташев</div>
+    <div class="profile-job">Software Engineer</div>
+  </div>
+  
+  <div class="profile-card">
+    <img class="profile-picture" src="profile2.jpg" alt="Profile Picture">
+    <div class="profile-name">Евгени Генчев</div>
+    <div class="profile-job">Software Engineer</div>
+  </div>
+  
+  <div class="profile-card">
+    <img class="profile-picture" src="profile3.jpg" alt="Profile Picture">
+    <div class="profile-name">Христо Кичев</div>
+    <div class="profile-job">Измамник</div>
+  </div>
 </div>
 
 <main-footer></main-footer>
