social network icon

--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -6,6 +6,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="aboutus.css">
     <link href="style.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
 
@@ -18,18 +19,33 @@
     <img class="profile-picture" src="profile1.jpg" alt="Profile Picture">
     <div class="profile-name">Иван Ташев</div>
     <div class="profile-job">Software Engineer</div>
+    <div class="social-icons">
+      <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
   </div>
+</div>
   
   <div class="profile-card">
     <img class="profile-picture" src="profile2.jpg" alt="Profile Picture">
     <div class="profile-name">Евгени Генчев</div>
     <div class="profile-job">Software Engineer</div>
+    <div class="social-icons">
+      <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+  </div>
   </div>
   
   <div class="profile-card">
     <img class="profile-picture" src="profile3.jpg" alt="Profile Picture">
-    <div class="profile-name">Христо Кичев</div>
-    <div class="profile-job">Измамник</div>
+    <div class="profile-name"></div>
+    <div class="profile-job"></div>
+    <div class="social-icons">
+      <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+  </div>
   </div>
 </div>
 
