--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -14,6 +14,12 @@
     <h1>About Us</h1>
 </header>
 <main-nav></main-nav>
+
+<div class="container-text">
+<p>Prehistory is the period of human history before written records. It includes the Paleolithic, Mesolithic, and Neolithic periods, which spanned millions of years.</p>
+<p>This website aims to explore the various aspects of prehistoric life, including ancient civilizations, tools, art, and cultural developments</p>
+</div>
+
 <div class="profile-container">
 <div class="profile-card">
     <img class="profile-picture" src="profile1.jpg" alt="Profile Picture">
