--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,8 @@
     <head>
         <title>404</title>
         <link rel="stylesheet" href="404.css">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
         <section class="page_404">
