--- a/public/contact.html
+++ b/public/contact.html
@@ -6,6 +6,8 @@
     <title>Contact Us</title>
     <link rel="stylesheet" href="contact.css">
     <link href="style.css" rel="stylesheet"/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
