--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header id="menuContainer">
-      <h1>Welcome to the Prehistory Sit</h1> 
+      <h1>Начална страница</h1> 
     </header>
     <main-nav></main-nav>
   
