--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -11,7 +11,7 @@
         </head>
         <body>
             <header>
-            <h1>Artifacts</h1>
+            <h1>Артефакти</h1>
         </header>
         <main-nav></main-nav>
         
