sheet and bulgarian update

--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>За нас</title>
     <link rel="stylesheet" href="aboutus.css">
     <link href="style.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -19,7 +19,8 @@
 
 <div class="container-text">
 <p>Prehistory is the period of human history before written records. It includes the Paleolithic, Mesolithic, and Neolithic periods, which spanned millions of years.</p>
-<p>This website aims to explore the various aspects of prehistoric life, including ancient civilizations, tools, art, and cultural developments</p>
+<p>Този екип не просто работи заедно, ние създаваме заедно и вярваме в силата на сътрудничеството, за да създадем нещо по-голямо.</p>
+<p>Имате въпроси или идеи? Свържете се с нас сега!</p>
 </div>
 
 <div class="profile-container">
@@ -47,8 +48,8 @@
   
   <div class="profile-card">
     <img class="profile-picture" src="profile3.jpg" alt="Profile Picture">
-    <div class="profile-name"></div>
-    <div class="profile-job"></div>
+    <div class="profile-name">Христо Кичев</div>
+    <div class="profile-job">Нищо неправещ</div>
     <div class="social-icons">
       <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
       <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
