--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home page</title>
+    <title>Начална страница</title>
     <link href="index.css" rel="stylesheet"/>
     <link href="style.css" rel="stylesheet"/>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
