--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -6,7 +6,7 @@
         <title>Artifacts</title>
         <link href="style.css" rel="stylesheet"/>
         <link href="artifacts.css" rel="stylesheet"/>
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         </head>
         <body>
@@ -14,15 +14,13 @@
             <h1>Артефакти</h1>
         </header>
         <main-nav></main-nav>
-        
-        
   <div id="artifacts"></div>  
   <div id="overlay"></div>     
         <main-footer></main-footer>
+        <script src="artifacts.js"></script>
         <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
         <script src="nav.js"></script>
         <script src="popupwindow.js"></script>
-        <script src="artifacts.js"></script>
         <script src="footer.js"></script>
     </body>
 </html>
