--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Home page</title>
     <link href="index.css" rel="stylesheet"/>
     <link href="style.css" rel="stylesheet"/>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/10.11.0/firebase-app-compat.js"></script>
