--- a/public/timeline.html
+++ b/public/timeline.html
@@ -6,7 +6,7 @@
     <title>Prehistory Timeline</title>
     <link rel="stylesheet" href="timeline.css">
     <link href="style.css" rel="stylesheet"/>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
 <body>
