about us content

--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -18,7 +18,7 @@
 <main-nav></main-nav>
 
 <div class="container-text">
-<p>Prehistory is the period of human history before written records. It includes the Paleolithic, Mesolithic, and Neolithic periods, which spanned millions of years.</p>
+<p>Нашият стремеж е да представим българската история чрез иновациите и да променяме света с технологията. </p>
 <p>Този екип не просто работи заедно, ние създаваме заедно и вярваме в силата на сътрудничеството, за да създадем нещо по-голямо.</p>
 <p>Имате въпроси или идеи? Свържете се с нас сега!</p>
 </div>
