--- a/public/contact.html
+++ b/public/contact.html
@@ -18,19 +18,19 @@
 <div class="contact-form">
 
     <div class="contact-info">
-        <h2>Get in Touch</h2>
-        <p>Have any questions or inquiries? Feel free to contact us using the form below or through our email.</p>
+        <h2>Свържете се с нас</h2>
+        <p>Имате въпроси? Не се притеснявайте! Свържете се с нас посредством вашия имейл.</p>
         <p>Email: contact@prehistoricadventures.com</p>
     </div>
-    <small>Enter message (optional) and click button "Send"</small>
+    <small>Въведете съобщение и натиснете бутона "Изпрати"</small>
     <div class="contact-section">
         <div class="wrapper centered">
             <article class="letter">
                 <div class="side">
-                    <h1>Contact us</h1>
+                    <h1>Формуляр</h1>
                     <form method="POST" action="https://sheetdb.io/api/v1/5glnhoicmz34w" id="sheetdb-form">
                     <p>
-                        <textarea placeholder="Your message" name="data[message]"></textarea>
+                        <textarea placeholder="Вашето съобщение" name="data[message]"></textarea>
                     </p>
                 </div>
                 <div class="side">
@@ -40,13 +40,13 @@
                     </p!--->
                     
                     <p>
-                            <input id="name" type="text" name="data[name]" placeholder="Your name">
+                            <input id="name" type="text" name="data[name]" placeholder="Вашето име">
                         </p>
                         <p>
-                            <input id="email" type="email" name="data[email]" placeholder="Your email">
+                            <input id="email" type="email" name="data[email]" placeholder="Вашият имейл">
                         </p>
                         <p>
-                            <button id="sendLetter" type="submit">Send</button>
+                            <button id="sendLetter" type="submit">Изпрати</button>
                         </p>
                     </form>
                     </div>
@@ -54,7 +54,7 @@
             <div class="envelope front"></div>
             <div class="envelope back"></div>
         </div>
-        <p class="result-message centered">Thank you for your message</p>
+        <p class="result-message centered">Благодарим Ви за изпратеното съобщение!</p>
     </div>
 </div>
 <script >
