--- a/public/contact.html
+++ b/public/contact.html
@@ -19,10 +19,9 @@
 
     <div class="contact-info">
         <h2>Свържете се с нас</h2>
-        <p></p>
-        <p>Имате въпроси? Не се притеснявайте! Свържете се с нас посредством вашия имейл.</p>
+        <p style="margin-top: 0.5cm;">Имате въпроси? Не се притеснявайте! Свържете се с нас посредством вашия имейл.</p>
     </div>
-    <small>Въведете съобщение и натиснете бутона "Изпрати"</small>
+    <small>Въведете съобщение и натиснете бутона "Изпрати".</small>
     <div class="contact-section">
         <div class="wrapper centered">
             <article class="letter">
