--- a/public/contact.html
+++ b/public/contact.html
@@ -19,7 +19,7 @@
 
     <div class="contact-info">
         <h2>Свържете се с нас</h2>
-        <p style="margin-top: 0.5cm;">Имате въпроси? Не се притеснявайте! Свържете се с нас посредством вашия имейл.</p>
+        <p style="margin-top: 0.9cm;">Имате въпроси? Не се притеснявайте! Свържете се с нас посредством вашия имейл.</p>
     </div>
     <small>Въведете съобщение и натиснете бутона "Изпрати".</small>
     <div class="contact-section">
@@ -57,22 +57,34 @@
     </div>
 </div>
 <script >
-    var form=document.getElementById('sheetdb-form');
-form.addEventListener("submit", e => {
-    e.preventDefault();
-    fetch(form.action, {
-        method: "POST",
-        body: new FormData(document.getElementById("sheetdb-form"))
-    }).then(response => {
-        document.body.classList.add("sent");
-        return response.json();
-    }).then(data => {
-        console.log(data);
-    }).catch(error => {
-        console.error('Error:', error);
+    var form = document.getElementById('sheetdb-form');
+
+if (form) {
+    form.addEventListener("submit", e => {
+        e.preventDefault();
+        fetch(form.action, {
+            method: "POST",
+            body: new FormData(document.getElementById("sheetdb-form"))
+        }).then(response => {
+            return response.json();
+        }).then(data => {
+            console.log(data);
+            document.body.classList.add("sent");
+            var refreshButton = document.createElement("button");
+            refreshButton.textContent = "Refresh";
+            refreshButton.style.position="absolute";
+            refreshButton.style.top="12cm";
+            refreshButton.style.left="16.5cm";
+            refreshButton.addEventListener("click", function() {
+                location.reload();
+            });
+            document.body.appendChild(refreshButton);
+        }).catch(error => {
+            console.error('Error:', error);
+        });
     });
-});
-    
+}
+
 </script>
 <main-footer></main-footer>
 <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
