--- a/public/contact.html
+++ b/public/contact.html
@@ -75,6 +75,7 @@ if (form) {
             refreshButton.style.position="absolute";
             refreshButton.style.top="12cm";
             refreshButton.style.left="16.5cm";
+            refreshButton.classList.add("refresh-button");
             refreshButton.addEventListener("click", function() {
                 location.reload();
             });
