--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -7,13 +7,32 @@
         <link href="style.css" rel="stylesheet"/>
         <link href="artifacts.css" rel="stylesheet"/>
         <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         </head>
         <body>
             <header>
-            <h1>Артефакти</h1>
-        </header>
-        <main-nav></main-nav>
+                <h1>Артефакти</h1>
+            </header>
+            <main-nav></main-nav>
+            <div class="card">
+                <div class="wrap">
+                    <div class="card-shadow">
+                        <div class="card-front"></div>
+                        <h2 class="card-title"> Hover me!</h2>
+                        <p class="card-subtitle">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        </p> 
+            </div>
+        </div>
+        </div>
+        <!-- <div class="card modal-container" id="${'modal-container'+data.id}">
+            <div class="card_content">
+                <div class="card_gloss">
+                    <p class="card_description" id="modal"></p>
+                </div>
+            </div>
+        </div> -->
   <div id="artifacts"></div>  
   <div id="overlay"></div>     
         <main-footer></main-footer>
