--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,8 @@
        </li>
       </ul>
      </nav>
-   <script src="https://unpkg.co/gsap@3/dist/gsap.min.js">
-   </script>
-   
+ 
+   <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
    <script>
      const navElement = document.querySelector("nav");
 
