--- a/public/index2.html
+++ b/public/index2.html
@@ -6,6 +6,7 @@
   <title>Home</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./contact.css">
+  <link rel="stylesheet" href="./style2.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
