--- a/public/index2.html
+++ b/public/index2.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style2.css">
   <link rel="stylesheet" href="./contact.css">
 </head>
 <body>
