--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -62,5 +62,6 @@
 <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 <script src="nav.js"></script>
 <script src="footer.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </body>
 </html>
