--- a/public/404.html
+++ b/public/404.html
@@ -4,6 +4,8 @@
         <title>404</title>
         <link rel="stylesheet" href="404.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
