--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,8 @@
     <!--Article-->
     <section class="page face top" id="about">
       <div class="act-table text-center">
-        <div class="act-table-cell ver-middle">about Page
+        <div class="act-table-cell ver-middle">
+          efesf
         </div>
       </div>
       <main-footer></main-footer>
@@ -78,7 +79,7 @@
       </div>
       <main-footer></main-footer>
     </section>
-    <!--Article-->
+    <!-- Article
     <section class="page face bottom" id="blog">
       <div class="act-table text-center">
         <div class="act-table-cell ver-middle">blog Page
@@ -86,14 +87,14 @@
       </div>
       <main-footer></main-footer>
     </section>
-    <!--Article-->
+    Article
     <section class="page face left" id="article">
       <div class="act-table text-center">
         <div class="act-table-cell ver-middle">article Page
         </div>
       </div>
       <main-footer></main-footer>
-    </section>
+    </section> -->
   </div>
 </div>
 <!-- partial -->
