--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -12,6 +12,7 @@
         </head>
         <body>
             <header>
+                <menu-nav></menu-nav>
                 <h1>Артефакти</h1>
             </header>
             <main-nav></main-nav>
