--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,13 @@
 <body>
 <!-- partial:index.partial.html -->
 <header>
+  <menu-nav></menu-nav>
   <nav class="text-center">
     <ul class="inline-block">
       <li class="pull-left active"><a href="#" data-direction="front">Home</a></li>
-      <li class="pull-left"><a href="#" data-direction="back">Portfolio</a></li>
-      <li class="pull-left"><a href="#" data-direction="top">About</a></li>
-      <li class="pull-left"><a href="#" data-direction="right">Contact</a></li>
+      <li class="pull-left"><a href="#" data-direction="back"></a></li>
+      <li class="pull-left"><a href="#" data-direction="top">Варна</a></li>
+      <li class="pull-left"><a href="#" data-direction="right">Писмеността</a></li>
       <div class="clearfix"></div>
     </ul>
   </nav>
