--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -16,29 +16,13 @@
                 <h1>Артефакти</h1>
             </header>
             <main-nav></main-nav>
-            <div class="card">
-                <div class="wrap">
-                    <div class="card-shadow">
-                        <div class="card-front"></div>
-                        <h2 class="card-title"> Hover me!</h2>
-                        <p class="card-subtitle">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                        </p> 
-            </div>
-        </div>
-        </div>
-        <!-- <div class="card modal-container" id="${'modal-container'+data.id}">
-            <div class="card_content">
-                <div class="card_gloss">
-                    <p class="card_description" id="modal"></p>
-                </div>
-            </div>
-        </div> -->
-  <div id="artifacts"></div>  
-  <div id="overlay"></div>     
-        <main-footer></main-footer>
+            
+            <div id="artifacts"></div>    
+            <div id="bot">
+                <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
+            </div> 
+            <main-footer></main-footer>
         <script src="artifacts.js"></script>
-        <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
         <script src="nav.js"></script>
         <script src="popupwindow.js"></script>
         <script src="footer.js"></script>
