--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <nav class="text-center">
     <ul class="inline-block">
       <li class="pull-left active"><a href="#" data-direction="front">Home</a></li>
-      <li class="pull-left"><a href="#" data-direction="back"></a></li>
+      <li class="pull-left"><a href="#" data-direction="back">Пещерите</a></li>
       <li class="pull-left"><a href="#" data-direction="top">Варна</a></li>
       <li class="pull-left"><a href="#" data-direction="right">Писмеността</a></li>
       <div class="clearfix"></div>
@@ -46,7 +46,6 @@
     <section class="page active face front" id="home">
       <div class="act-table text-center">
         <div class="act-table-cell ver-middle">
-          Home Page
           
         </div>
       </div>
@@ -55,8 +54,12 @@
     <!--Article-->
     <section class="page face back" id="portfolio">
       <div class="act-table text-center">
+        <div class="first-images">
+          <img style="height: 5cm;width: 5cm;" src="https://lh3.googleusercontent.com/p/AF1QipNylu8oR8h1o6tMoiqXKKxumLa0ev1t1ideK116=s1360-w1360-h1020" alt="Пещерата Козарника">
+        </div>
         <div class="act-table-cell ver-middle">
-          
+          В близост до Белоградчик една малка пещера на име Козарника всяка година изумява света с откритията в себе си.Вече 20 години всяко лято екип от учени е на терен там и колкото по-дълбоко стигат, толкова повече интересни неща откриват. Ръководителят на проучванията доц. д-р Николай Сираков смята, че са открили доказателства за най-ранното човешко присъствие в Европа. Още при първоначалните разкопки през 1996 г. археолозите открили останки от ранни представители на съвременния човек – Homo Sapiens Sapiens.
+          Когато напълно изучили този слой, те продължили надолу и открили доказателства за присъствието на по-древните неандерталци.
         </div>
       </div>
       <main-footer></main-footer>
