--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -12,9 +12,6 @@
 </head>
 <body>
 
-<header>
-    <h1>За нас</h1>
-</header>
 <main-nav></main-nav>
 <input type="checkbox" id="menu-toggle"/>
 <label for="menu-toggle"><i class="fas fa-times"></i>
@@ -69,17 +66,17 @@
 <div class="menu">
     <ul id="nav">
         <li class="nav-link">
-            <h1 target="_blank" data-name="home" data-text="Home">Home</h1>
+            <h1 target="_blank" data-text="Home" data-name="home" >Home</h1>
             <a  >Ho</a>
         </li>
         <li class="nav-link">
-            <h1 data-name="About">About</h1>
+            <h1 target="_blank" data-text="About" data-name="About">About</h1>
         </li>
         <li class="nav-link">
-            <h1 data-name="services">services</h1>
+            <h1 target="_blank" data-text="services" data-name="services">services</h1>
         </li>
         <li class="nav-link">
-            <h1 data-name="contact">contact</h1>
+            <h1 target="_blank" data-text="contact" data-name="contact">contact</h1>
         </li>
     </ul>
 </div>
