--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,12 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 </head>
 <body>
+  <input type="checkbox" id="menu-toggle"/>
+<label for="menu-toggle"><i class="fas fa-times"></i>
+  <i class="fas fa-bars"></i>
+</label>
+<div class="page-content-wrapper">
+  <div class="page-content">
 <!-- partial:index.partial.html -->
 <header>
   <menu-nav></menu-nav>
@@ -90,23 +96,9 @@
       </div>
       <main-footer></main-footer>
     </section>
-    <!-- Article
-    <section class="page face bottom" id="blog">
-      <div class="act-table text-center">
-        <div class="act-table-cell ver-middle">blog Page
-        </div>
-      </div>
-      <main-footer></main-footer>
-    </section>
-    Article
-    <section class="page face left" id="article">
-      <div class="act-table text-center">
-        <div class="act-table-cell ver-middle">article Page
-        </div>
-      </div>
-      <main-footer></main-footer>
-    </section> -->
   </div>
+</div>
+</div>
 </div>
 <!-- partial -->
   <script src="integration.js"></script>
