--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -12,13 +12,33 @@
 </head>
 <body>
 
-<main-nav></main-nav>
-<input type="checkbox" id="menu-toggle"/>
-<label for="menu-toggle"><i class="fas fa-times"></i>
-  <i class="fas fa-bars"></i>
-</label>
-<div class="page-content-wrapper">
-  <div class="page-content">
+  <div class="navigation">
+    <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
+    <label for="nav-toggle" class="navigation__button">
+      <span class="navigation__icon" aria-label="toggle navigation menu"></span>
+    </label>
+    <div class="navigation__background"></div>
+
+    <nav class="navigation__nav" role="navigation">
+      <ul class="navigation__list navigation_backeffect">
+        <li class="navigation__item">
+          <a target="_blank" data-text="Начална страница" href="index.html" class="navigation__link">Начална страница</a>
+        </li>
+        <li class="navigation__item">
+          <a target="_blank" data-text="Артефакти" href="artifacts.html" class="navigation__link">Артефакти</a>
+        </li>
+        <li class="navigation__item">
+          <a target="_blank" data-text="Линия на времето" href="timeline.html" class="navigation__link">Линия на времето</a>
+        </li>
+        <li class="navigation__item">
+          <a target="_blank" data-text="За Нас" href="aboutus.html" class="navigation__link">За Нас</a>
+        </li>
+        <li class="navigation__item">
+          <a target="_blank" data-text="Контакти" href="contact.html" class="navigation__link">Контакти</a>
+        </li>
+  </ul>
+</nav>
+</div>
     <div class="container-text">
       <p>Нашият стремеж е да представим българската история чрез иновациите и да променяме света с технологията. </p>
       <p>Този екип не просто работи заедно, ние създаваме заедно и вярваме в силата на сътрудничеството, за да създадем нещо по-голямо.</p>
@@ -61,28 +81,6 @@
       </div>  
     <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
             <main-footer></main-footer>  
-          </div>
-</div>
-<div class="menu">
-    <ul id="nav">
-        <li class="nav-link">
-            <h1 target="_blank" data-text="Home" data-name="home" >Home</h1>
-            <a  >Ho</a>
-        </li>
-        <li class="nav-link">
-            <h1 target="_blank" data-text="About" data-name="About">About</h1>
-        </li>
-        <li class="nav-link">
-            <h1 target="_blank" data-text="services" data-name="services">services</h1>
-        </li>
-        <li class="nav-link">
-            <h1 target="_blank" data-text="contact" data-name="contact">contact</h1>
-        </li>
-    </ul>
-</div>
-
-
-<script src="nav.js"></script>
 <script src="footer.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </body>
