--- a/public/contact.html
+++ b/public/contact.html
@@ -15,7 +15,33 @@
     <menu-nav></menu-nav>
     <h1>Контакти</h1>
 </header>
-<main-nav></main-nav>
+<div class="navigation">
+    <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
+    <label for="nav-toggle" class="navigation__button">
+      <span class="navigation__icon" aria-label="toggle navigation menu"></span>
+    </label>
+    <div class="navigation__background"></div>
+
+    <nav class="navigation__nav" role="navigation">
+      <ul class="navigation__list navigation_backeffect">
+        <li class="navigation__item">
+          <a target="_blank" data-text="Начална страница" href="index.html" class="navigation__link">Начална страница</a>
+        </li>
+        <li class="navigation__item">
+          <a target="_blank" data-text="Артефакти" href="artifacts.html" class="navigation__link">Артефакти</a>
+        </li>
+        <li class="navigation__item">
+          <a target="_blank" data-text="Линия на времето" href="timeline.html" class="navigation__link">Линия на времето</a>
+        </li>
+        <li class="navigation__item">
+          <a target="_blank" data-text="За Нас" href="aboutus.html" class="navigation__link">За Нас</a>
+        </li>
+        <li class="navigation__item">
+          <a target="_blank" data-text="Контакти" href="contact.html" class="navigation__link">Контакти</a>
+        </li>
+  </ul>
+</nav>
+</div>
 
 <div class="contact-form">
 
@@ -86,7 +112,6 @@ if (form) {
 </script>
 <main-footer></main-footer>
 <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
-<script src="nav.js"></script>
 <script src="footer.js"></script>
 </body>
 </html>
