--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -11,7 +11,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         </head>
         <body>
-          <div class="navigation">
+          <div class="navigation" id="navigation">
             <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
             <label for="nav-toggle" class="navigation__button">
               <span class="navigation__icon" aria-label="toggle navigation menu"></span>
@@ -42,8 +42,6 @@
         <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
             <main-footer></main-footer>  
         <script src="artifacts.js"></script>
-        <script src="nav.js"></script>
-        <script src="popupwindow.js"></script>
         <script src="footer.js"></script>
     </body>
 </html>
