--- a/public/probnatimeline.html
+++ b/public/probnatimeline.html
@@ -13,7 +13,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <style>
         body {
-  
+  background-color: #1d1d1b;
 
   overflow-x: hidden;
 }
@@ -894,12 +894,8 @@ img {
 
 
   });
-})(jQuery);
-
-
-        
+})(jQuery);   
       </script>
-      <script src="footer.js"></script>
    </body>
 </html>
 </body>
