--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 <header>
   <nav class="text-center">
     <ul class="inline-block">
-      <li class="pull-left active"><a href="#" data-direction="front">Home</a></li>
+      <li class="pull-left active"><a href="#" data-direction="front">NAchalo</a></li>
       <li class="pull-left"><a href="#" data-direction="back">Пещерите</a></li>
       <li class="pull-left"><a href="#" data-direction="top">Варна</a></li>
       <li class="pull-left"><a href="#" data-direction="right">Писмеността</a></li>
