--- a/public/timeline.html
+++ b/public/timeline.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Линия на времето</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="timeline.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <script defer src="timeline.js"></script>
@@ -17,7 +17,7 @@
    <body>
     <div class="navigation">
       <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
-      <label for="nav-toggle" class="navigation__button">
+      <label for="nav-toggle" class="navigation__button" style="--button_color:#1d1d1b">
         <span class="navigation__icon" aria-label="toggle navigation menu"></span>
       </label>
       <div class="navigation__background"></div>
