--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <title>Начална страница</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="nicepage.css" media="screen">
+<link rel="stylesheet" href="Home.css" media="screen">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- update the version number as needed -->
