--- a/public/index.html
+++ b/public/index.html
@@ -344,18 +344,13 @@
     <section class="page face top" id="varna">
       <div class="act-table text-center">
         <div class="act-table-cell ver-middle">
-          <div class="jumbotron">
-            <div id="basic_information"></div>
+          <div class="jumbotron" id="jumbotron">
           </div>
           <!-- /.jumbotron -->
           
           <main class="main">
             <div class="container">
-              <div class="row">
-                <div id="first_paragraph"></div>
-                <div id="second_paragraph"></div>
-                
-                <!-- /article -->
+              <div class="row" id="row">
                 <article class="col-md-12">
                   <div class="overlay"></div>
                   <blockquote>
@@ -379,7 +374,7 @@
           <!-- /.main -->
 
 <main-footer></main-footer>
-<script src="index.js"></script>
+
 </div>
       </div>
     </section>
@@ -521,14 +516,14 @@
     </section>
   </div>
 </div>
-</div>
-</div>
 <!-- partial -->
   <script src="integration.js"></script>
   <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
   <script src="footer.js"></script>
-  <script src="index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="script.js"></script>
+  <script src="index.js">
+  
+  </script>
 </body>
 </html>
