--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -80,7 +80,10 @@
         </div>
       </div>  
     <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
-            <main-footer></main-footer>  
+            <main-footer style="position: fixed;left: 0;
+            bottom: 0;
+            width: 100%;
+            text-align: center;"></main-footer>  
 <script src="footer.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </body>
