--- a/public/contact.html
+++ b/public/contact.html
@@ -119,7 +119,10 @@ if (form) {
       document.getElementById('menuButton').style.backgroundColor = currentPageColor;
     });
 </script>
-<main-footer></main-footer>
+<main-footer style="position: fixed;left: 0;
+bottom: 0;
+width: 100%;
+text-align: center;"></main-footer>
 <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 <script src="footer.js"></script>
 </body>
