--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -41,7 +41,10 @@
         <div id="artifacts"></div>  
         <div id="mantas"></div>
         <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
-            <main-footer></main-footer>  
+            <main-footer style="position: fixed;left: 0;
+            bottom: 0;
+            width: 100%;
+            text-align: center;"></main-footer>  
         <script src="artifacts.js"></script>
         <script src="footer.js"></script>
     </body>
