--- a/public/timeline.html
+++ b/public/timeline.html
@@ -17,10 +17,10 @@
    <body>
     <div class="navigation">
       <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
-      <label for="nav-toggle" class="navigation__button" style="--button_color:#1d1d1b">
+      <label for="nav-toggle" class="navigation__button">
         <span class="navigation__icon" aria-label="toggle navigation menu"></span>
       </label>
-      <div class="navigation__background"></div>
+      <div class="navigation__background" id="nav_background"></div>
     
       <nav class="navigation__nav" role="navigation">
         <ul class="navigation__list navigation_backeffect">
