--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -14,10 +14,10 @@
 <header  style="font-size: 25px;">За нас</header>
   <div class="navigation">
     <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
-    <label for="nav-toggle" class="navigation__button">
+    <label for="nav-toggle" class="navigation__button" style="--button_color:#1d1d1b">
       <span class="navigation__icon" aria-label="toggle navigation menu"></span>
     </label>
-    <div class="navigation__background"></div>
+    <div class="navigation__background" id="nav_background"></div>
 
     <nav class="navigation__nav" role="navigation">
       <ul class="navigation__list navigation_backeffect">
@@ -77,8 +77,8 @@
             <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
         </div>
-        </div>
-      </div>  
+      </div>
+    </div>  
     <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
             <main-footer style="position: fixed;left: 0;
             bottom: 0;
