--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <label for="nav-toggle" class="navigation__button">
       <span class="navigation__icon" aria-label="toggle navigation menu"></span>
     </label>
-    <div class="navigation__background"></div>
+    <div class="navigation__background" id="nav_background"></div>
 
     <nav class="navigation__nav" role="navigation">
       <ul class="navigation__list navigation_backeffect">
